--- a/smart_internship_assistant/app/src/main/res/layout/activity_assistant.xml
+++ b/smart_internship_assistant/app/src/main/res/layout/activity_assistant.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.AssistantActivity">
-    <com.baidu.mapapi.map.MapView
-        android:id="@+id/mapView"
+    <com.amap.api.maps.MapView
+        android:id="@+id/gaode_map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clickable="true" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="39dp">
+    </com.amap.api.maps.MapView>
+</RelativeLayout>
