添加后置摄像头已经语音

--- a/smart_internship_assistant2/app/src/main/res/xml/network_security_config.xml
+++ b/smart_internship_assistant2/app/src/main/res/xml/network_security_config.xml
@@ -2,6 +2,7 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">192.168.43.20</domain>
+        <domain includeSubdomains="true">192.168.43.118</domain>
         <domain includeSubdomains="true">192.168.10.165</domain>
         <domain includeSubdomains="true">8.140.250.103</domain>
     </domain-config>
