--- a/smart_internship_assistant2/app/src/main/res/layout/activity_speech.xml
+++ b/smart_internship_assistant2/app/src/main/res/layout/activity_speech.xml
@@ -1,78 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical">
 
-
+    <org.webrtc.SurfaceViewRenderer
+        android:id="@+id/svr_local"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <LinearLayout
+        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin = "10dp"
         android:orientation="vertical">
 
         <LinearLayout android:id="@+id/l1"
-            android:layout_marginTop="30dp"
             android:layout_marginLeft="5dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
             <TextView android:id="@+id/recognize_state"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="识别状态："/>
             <TextView android:id="@+id/volume"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="音量："/>
 
         </LinearLayout>
 
         <LinearLayout android:id="@+id/l1_1"
-            android:layout_marginTop="30dp"
             android:layout_marginLeft="5dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:orientation="horizontal">
             <TextView android:id="@+id/voice_db"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="分贝："/>
 
             <Switch
                 android:id="@+id/silent_switch"
                 android:checked="false"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:text="静音检测" />
         </LinearLayout>
-        <LinearLayout android:id="@+id/l2"
-            android:layout_weight="1"
-            android:layout_marginBottom="25dp"
+        <LinearLayout
+            android:id="@+id/l2"
+            android:layout_weight="2"
             android:orientation="horizontal"
             android:gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="0dp">
 
             <Button android:id="@+id/start"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:text="start" />
 
             <Button android:id="@+id/cancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:text="cancel" />
 
@@ -86,19 +89,19 @@
         </LinearLayout>
     </LinearLayout>
 
-    <ScrollView
-        android:id="@+id/scroll_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="5dp">
+<!--    <ScrollView-->
+<!--        android:id="@+id/scroll_view"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_margin="5dp">-->
 
-        <TextView
-            android:id="@+id/recognize_result"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minLines="3"
-            android:scrollbars="vertical" />
-    </ScrollView>
+<!--        <TextView-->
+<!--            android:id="@+id/recognize_result"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:minLines="3"-->
+<!--            android:scrollbars="vertical" />-->
+<!--    </ScrollView>-->
 
 
-</LinearLayout>
+</RelativeLayout>
